--- a/src/styles/partials/_contact.sass
+++ b/src/styles/partials/_contact.sass
@@ -2,14 +2,14 @@
 
 // Contact section styles
 section.contact
-    background: variables.$bg
-    color: variables.$text
+    background: var(--clr-bg)
+    color: var(--clr-text)
     text-shadow: none
     box-shadow: none
     > article
         margin: variables.$margin
     hr
-        border: 1px solid var(--clr-dark)
+        border: 1px solid var(--clr-border)
     
     form
         margin-top: variables.$margin
