--- a/src/styles/partials/_responsive.sass
+++ b/src/styles/partials/_responsive.sass
@@ -134,8 +134,7 @@ img
         iframe
             height: variables.$post-iframe-height-xl
 
-// Disable all shadows in dark mode for readability
+// Remove text shadows in dark mode for readability
 [class~='dark'], .dark *
     text-shadow: none
-    filter: none
 
